# GmailAiAssistant

./: .gitignore  ARCHITECTURE.md  HOW_TO_RUN.md  INSTALLATION.md  QUICK_START.md  README.md  app.py  gmail_service.py  pyproject.toml  rag_engine.py  requirements.txt  utils.py
attached_assets/: Pasted--Goal-Create-an-AI-assistant-that-chats-with-your-Gmail-Inbox-using-Retrieval-Augmented-Generatio-1746830713445.txt
